Set up initial hero section with dummy cards

--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Love-is-love</h1>
-      <h2 class="project-tagline">Love is love</h2>
-      <a href="https://github.com/venetucci/love-is-love" class="btn">View on GitHub</a>
-      <a href="https://github.com/venetucci/love-is-love/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/venetucci/love-is-love/tarball/master" class="btn">Download .tar.gz</a>
+      <div class="card-group">
+        <img src="/assets/card.png" class="card card-1" />
+        <img src="/assets/card.png" class="card card-2" />
+        <img src="/assets/card.png" class="card card-3" />
+        <img src="/assets/card.png" class="card card-4" />
+        <img src="/assets/card.png" class="card card-5" />
+        <img src="/assets/card.png" class="card card-6" />
+        <img src="/assets/card.png" class="card card-7" />
+        <img src="/assets/card.png" class="card card-8" />
+      </div>
+      <div class="header-content">
+        <h1 class="project-name">#loveislove project</h1>
+        <h2 class="project-tagline">Free illustrations highlighting LGBT couples</h2>
+        <a href="https://github.com/venetucci/love-is-love" class="btn">Request an illustration</a>
+      </div>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>#loveislove project</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
@@ -52,6 +62,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
