Fixed image path

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </a>
       </div>
       <div class="card-group">
-        <img src="/assets/card-1.png" class="card card-1" />
-        <img src="/assets/card-2.png" class="card card-2" />
-        <img src="/assets/card-3.png" class="card card-3" />
-        <img src="/assets/card-4.png" class="card card-4" />
-        <img src="/assets/card-5.png" class="card card-5" />
-        <img src="/assets/card-6.png" class="card card-6" />
-        <img src="/assets/card-7.png" class="card card-7" />
-        <img src="/assets/card-8.png" class="card card-8" />
+        <img src="assets/card-1.png" class="card card-1" />
+        <img src="assets/card-2.png" class="card card-2" />
+        <img src="assets/card-3.png" class="card card-3" />
+        <img src="assets/card-4.png" class="card card-4" />
+        <img src="assets/card-5.png" class="card card-5" />
+        <img src="assets/card-6.png" class="card card-6" />
+        <img src="assets/card-7.png" class="card card-7" />
+        <img src="assets/card-8.png" class="card card-8" />
       </div>
       <div class="header-content">
         <h1 class="project-name">#loveislove project</h1>
