clean up mobile styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <div class="share">
         <a target="_blank" href="http://ctt.ec/GPplI">
-          <img src="/assets/tweet.png" class="share-tweet" /> Share
+          <img src="assets/tweet.png" class="share-tweet" /> Share
         </a>
       </div>
       <div class="card-group">
@@ -29,12 +29,16 @@
       <div class="header-content">
         <h1 class="project-name">#loveislove project</h1>
         <h2 class="project-tagline">Free illustrations highlighting LGBT couples</h2>
-        <a href="#about" class="btn">Request an illustration</a>
+        <a id="request" href="#about" class="btn">Request an illustration</a>
+      </div>
+      <div class="card-group-mobile">
+        <img src="assets/card-9.png" class="card card-mobile" />
       </div>
     </section>
 
-<section class="main-content">
-  <h3><a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>#loveislove project</h3>
+<section class="main-content" id="about">
+  <article class="project" id="about">
+  <h3>#loveislove project</h3>
     <p>Designer <a href="http://www.twitter.com/mvenetucci" target="blank">Michelle Venetucci Harvey</a> started the #loveislove project after the 2016 election, in response to the fear felt by individuals in the LGBT community. In support of the fact that everyone deserves love (and all the rights that come along with that), she's offering free digital illustrations of LGBT couples in hopes of providing a tiny moment of happiness and support.
     <br>
     <p>Couples or friends and family can request an illustration. These make nice sentimental keepsakes and gifts.</p>
@@ -42,11 +46,12 @@
     <p>One illustration of the happy couple, delivered digitally. You will get the opportunity to request changes. Wait times vary based on availability.</p>
   <h3>How to request an illustration</h3>
     <p>Couples who would like an illustration, or friends and family who would like to gift an illustration, can request one by <a href="mailto:michelle.ann.harvey@gmail.com">emailing Michelle</a> or sending her a DM on <a href="http://www.twitter.com/mvenetucci" target="blank">Twitter</a>. Please include reference photos for the illustration.</p>
+  </article>
 </section>
 
 <section class="footer-content">
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/venetucci/love-is-love">Love-is-love</a> is maintained by <a href="https://github.com/venetucci">Michelle</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/venetucci/love-is-love" target="_blank">Love-is-love</a> is maintained by <a href="https://www.twitter.com/mvenetucci" target="_blank">Michelle</a>.</span>
       </footer>
 </section>
 
