update stylings and readme

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="assets/card-8.png" class="card card-8" />
       </div>
       <div class="header-content">
-        <h1 class="project-name">#loveislove project</h1>
+        <h1 class="project-name">#loveislove Project</h1>
         <h2 class="project-tagline">Free illustrations highlighting LGBT couples</h2>
         <a id="request" href="#about" class="btn">Request an illustration</a>
       </div>
@@ -38,7 +38,7 @@
 
 <section class="main-content" id="about">
   <article class="project" id="about">
-  <h3>#loveislove project</h3>
+  <h3>#loveislove Project</h3>
     <p>Designer <a href="http://www.twitter.com/mvenetucci" target="blank">Michelle Venetucci Harvey</a> started the #loveislove project after the 2016 election, in response to the fear felt by individuals in the LGBT community. In support of the fact that everyone deserves love (and all the rights that come along with that), she's offering free digital illustrations of LGBT couples in hopes of providing a tiny moment of happiness and support.
     <br>
     <p>Couples or friends and family can request an illustration. These make nice sentimental keepsakes and gifts.</p>
