--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Love-is-love by venetucci</title>
+    <title>Love is love</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png?v=2">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#request").click(function() {
+            $('html, body').animate({
+              scrollTop: $("#about").offset().top
+            }, 500);
+            return false;
+        });
+      });
+    </script>
   </head>
   <body>
     <section class="page-header">
@@ -25,6 +40,9 @@
         <img src="assets/card-6.png" class="card card-6" />
         <img src="assets/card-7.png" class="card card-7" />
         <img src="assets/card-8.png" class="card card-8" />
+        <img src="assets/card-10.png" class="card card-10" />
+        <img src="assets/card-11.png" class="card card-11" />
+        <img src="assets/card-12.png" class="card card-12" />
       </div>
       <div class="header-content">
         <h1 class="project-name">#loveislove Project</h1>
@@ -39,7 +57,7 @@
 <section class="main-content" id="about">
   <article class="project" id="about">
   <h3>#loveislove Project</h3>
-    <p>Designer <a href="http://www.twitter.com/mvenetucci" target="blank">Michelle Venetucci Harvey</a> started the #loveislove project after the 2016 election, in response to the fear felt by individuals in the LGBT community. In support of the fact that everyone deserves love (and all the rights that come along with that), she's offering free digital illustrations of LGBT couples in hopes of providing a tiny moment of happiness and support.
+    <p><a href="http://www.twitter.com/mvenetucci" target="blank">Michelle Venetucci Harvey</a> started the #loveislove project after the 2016 election, in response to the fear felt by individuals in the LGBT community. In support of the fact that everyone deserves love (and all the rights that come along with that), she's offering free digital illustrations of LGBT couples in hopes of providing a tiny moment of happiness and support.
     <br>
     <p>Couples or friends and family can request an illustration. These make nice sentimental keepsakes and gifts.</p>
   <h3>What to expect</h3>
