Update landing page style and text

--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
 <section class="main-content" id="about">
   <article class="project" id="about">
   <h3>#loveislove Project</h3>
-    <p><a href="http://www.twitter.com/mvenetucci" target="blank">Michelle Venetucci Harvey</a> started the #loveislove project after the 2016 election, in response to the fear felt by individuals in the LGBT community. In support of the fact that everyone deserves love (and all the rights that come along with that), she's offering free digital illustrations of LGBT couples in hopes of providing a tiny moment of happiness and support.
+    <p><a href="http://www.twitter.com/mvenetucci" target="blank">Michelle Venetucci Harvey</a> started the #loveislove project after the 2016 election, in response to the fear felt by individuals in the LGBTQ community. In support of the fact that everyone deserves love (and all the rights that come along with that), she's offering free digital illustrations of LGBTQ couples in hopes of providing a tiny moment of happiness and support.
     <br>
     <p>Couples or friends and family can request an illustration. These make nice sentimental keepsakes and gifts.</p>
   <h3>What to expect</h3>
     <p>One illustration of the happy couple, delivered digitally. You will get the opportunity to request changes. Wait times vary based on availability.</p>
   <h3>How to request an illustration</h3>
     <p>Couples who would like an illustration, or friends and family who would like to gift an illustration, can request one by <a href="mailto:michelle.ann.harvey@gmail.com">emailing Michelle</a> or sending her a DM on <a href="http://www.twitter.com/mvenetucci" target="blank">Twitter</a>. Please include reference photos for the illustration.</p>
+  <h3>What if I identify as straight? Can I have an illustration?</h3>
+    <p>Couples or individuals who do not identify as LGBTQ can still request an illustration, in exchange for a sliding scale donation that will be sent to an organization that works on related issues. Contact Michelle for more information.</p>
   </article>
 </section>
 
