Update illustration and Open Graph info

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png?v=2">
+    <meta property="og:url"                content="https://venetucci.github.io/love-is-love/" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Love is Love Project" />
+    <meta property="og:description"        content="Free illustrations for LGBT couples." />
+    <meta property="og:image"              content="https://venetucci.github.io/love-is-love/assets/site_preview.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
@@ -57,7 +62,7 @@
 <section class="main-content" id="about">
   <article class="project" id="about">
   <h3>#loveislove Project</h3>
-    <p><a href="http://www.twitter.com/mvenetucci" target="blank">Michelle Venetucci Harvey</a> started the #loveislove project after the 2016 election, in response to the fear felt by individuals in the LGBTQ community. In support of the fact that everyone deserves love (and all the rights that come along with that), she's offering free digital illustrations of LGBTQ couples in hopes of providing a tiny moment of happiness and support.
+    <p><a href="http://www.twitter.com/mvenetucci" target="blank">Michelle Venetucci Harvey</a> started the #loveislove project after the 2016 election, in response to the fear felt by individuals in the LGBTQ community. In support of the fact that everyone deserves love (and all the rights that come along with that), she's offering free digital illustrations of LGBTQ couples (or triads) in hopes of providing some happiness and support.
     <br>
     <p>Couples or friends and family can request an illustration. These make nice sentimental keepsakes and gifts.</p>
   <h3>What to expect</h3>
