--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url"                content="https://venetucci.github.io/love-is-love/" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="Love is Love Project" />
-    <meta property="og:description"        content="Free illustrations for LGBT couples." />
+    <meta property="og:description"        content="Free illustrations for LGBTQ couples." />
     <meta property="og:image"              content="https://venetucci.github.io/love-is-love/assets/site_preview.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript">
@@ -51,7 +51,7 @@
       </div>
       <div class="header-content">
         <h1 class="project-name">#loveislove Project</h1>
-        <h2 class="project-tagline">Free illustrations highlighting LGBT couples</h2>
+        <h2 class="project-tagline">Free illustrations highlighting LGBTQ couples</h2>
         <a id="request" href="#about" class="btn">Request an illustration</a>
       </div>
       <div class="card-group-mobile">
